# ToolTeller

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/doc_reader/: crew.py  main.py
src/doc_reader/config/: agents.yaml  tasks.yaml
